projects/ygg-bootstrap/src/cst/parse.rs
#![allow(unused_imports, dead_code, clippy::all)]
use regex::Regex;
use std::collections::HashMap;
use unicode_xid::UnicodeXID;

#[derive(Clone, Debug)]
pub struct Node {
    pub rule: Rule,
    pub start: usize,
    pub end: usize,
    pub children: Vec<Node>,
    pub label: Option<&'static str>,
    pub alternative: Option<&'static str>,
}

impl Node {
    fn new(rule: Rule, start: usize, end: usize, label: Option<&'static str>, alternative: Option<&'static str>) -> Self {
        Self {
            rule,
            start,
            end,
            children: Vec::new(),
            label,
            alternative,
        }
    }

    pub fn print_to_string(&self, input: &str) -> String {
        let children = if self.children.is_empty() {
            String::new()
        } else {
            format!(", {}", self.children.iter().map(|node| node.print_to_string(input)).collect::<Vec<String>>().join(", "))
        };

        format!("({:?}, {}\"{}\"{})", self.rule, if let Some(alt) = self.alternative { format!("alt={}, ", alt) } else { String::new() }, escape_string(&input[self.start..self.end]), children,)
    }

    pub fn is_empty(&self) -> bool {
        self.start == self.end
    }

    pub fn as_str<'s>(&self, input: &'s str) -> &'s str {
        &input[self.start..self.end]
    }
}

fn escape_string(str: &str) -> String {
    let mut res = String::new();

    for ch in str.chars() {
        match ch {
            '\\' => res.push_str("\\\\"),
            '\t' => res.push_str("\\t"),
            '\n' => res.push_str("\\n"),
            '\r' => res.push_str("\\r"),
            '"' => res.push_str("\\\""),
            ch => res.push(ch),
        }
    }

    res
}

#[derive(Clone, Copy, Hash, PartialEq, Eq)]
#[allow(non_camel_case_types)]
enum Terminal {
    Literal_28,
    Literal_11,
    Literal_27,
    Literal_14,
    Literal_19,
    Literal_18,
    Literal_9,
    Literal_10,
    Literal_23,
    Literal_21,
    Literal_1,
    Literal_22,
    Literal_30,
    Literal_4,
    Literal_31,
    Literal_17,
    Literal_29,
    Literal,
    Literal_12,
    Literal_16,
    Literal_8,
    Literal_13,
    Literal_20,
    Literal_7,
    Literal_24,
    Literal_26,
    Literal_25,
    Literal_5,
    Literal_6,
    _as,
    fragment_0,
    grammar_0,
    ignore_0,
    import_0,
    _macro,
    _return,
    Literal_0,
    Literal_3,
    Literal_2,
    Literal_15,
    Regex_0,
    Regex,
    Regex_1,
    Regex_2,
    s,
    Regex_3,
}

#[derive(Clone, Copy, Debug, Hash, PartialEq, Eq)]
#[allow(non_camel_case_types)]
pub enum Rule {
    Terminal,
    List,
    MustNotMatch,
    Any,
    More,
    program,
    statement,
    empty_statement,
    eos,
    grammar_statement,
    grammar,
    fragment_statement,
    fragment,
    import_statement,
    import,
    symbol_alias,
    ignore_statement,
    ignore,
    assign_statement,
    assign_kind,
    expr,
    expr_next,
    term,
    mark_branch,
    infix,
    prefix,
    suffix,
    data,
    list,
    slice,
    regex_range,
    macro_call,
    macro_then,
    macro_kv,
    macro_define,
    macro_arg,
    block,
    string,
    integer,
    symbol_path,
    symbol,
    IGNORE,
    SPACE,
    NEWLINE,
    COMMENT,
    Dot,
    EOI,
    XID_IDENTIFIER,
}

#[allow(non_snake_case)]
pub struct PEG {
    terminal_memo: HashMap<(usize, Terminal), Option<usize>>,
    rule_memo: HashMap<(usize, Rule), Result<Node, usize>>,
    regex_Regex_0: Regex,
    regex_Regex: Regex,
    regex_Regex_1: Regex,
    regex_Regex_2: Regex,
    regex_s: Regex,
    regex_Regex_3: Regex,
}

impl PEG {
    pub fn new() -> Self {
        Self {
            terminal_memo: HashMap::new(),
            rule_memo: HashMap::new(),
            regex_Regex_0: Regex::new(r########"^"([^\\"]|\\.)*""########).unwrap(),
            regex_Regex: Regex::new(r########"^'([^\\']|\\.)*'"########).unwrap(),
            regex_Regex_1: Regex::new(r########"^0|[1-9](_?[0-9])*"########).unwrap(),
            regex_Regex_2: Regex::new(
                r########"^[
]+"########,
            )
            .unwrap(),
            regex_s: Regex::new(r########"^[\s]+"########).unwrap(),
            regex_Regex_3: Regex::new(
                r########"^[^
]*"########,
            )
            .unwrap(),
        }
    }

    pub fn parse(&mut self, input: &str) -> Result<Node, (usize, usize)> {
        self.rule_memo.clear();
        self.terminal_memo.clear();

        self.rule_program(0, input).map_err(|pos| {
            let mut line_no = 1;
            let mut col_no = pos;

            for l in input.char_indices().filter_map(|(index, c)| if c == '\n' { Some(index + 1) } else { None }) {
                if pos < l {
                    break;
                }

                if pos == l {
                    // chomp off new line
                    col_no -= 1;
                    break;
                }

                col_no = pos - l;

                line_no += 1;
            }

            (line_no, col_no)
        })
    }

    #[allow(non_snake_case)]
    fn rule_program(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::program);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            self.rule_IGNORE(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    {
                        let mut list = Vec::new();
                        let start = pos;
                        let mut pos = pos;

                        while let Ok(node) = {
                            let mut list = Vec::new();
                            let start = pos;

                            self.rule_statement(pos, input)
                                .and_then(|mut node| {
                                    let pos = node.end;
                                    node.label = Some("statement");
                                    list.push(node);
                                    self.rule_IGNORE(pos, input)
                                })
                                .map(|node| {
                                    let end = node.end;
                                    list.push(node);

                                    Node {
                                        rule: Rule::List,
                                        start,
                                        end,
                                        children: list,
                                        label: None,
                                        alternative: None,
                                    }
                                })
                        } {
                            if pos == node.end {
                                // must be making progress
                                break;
                            }
                            pos = node.end;
                            list.push(node);
                        }

                        Ok(Node {
                            rule: Rule::Any,
                            start,
                            end: pos,
                            children: list,
                            label: None,
                            alternative: None,
                        })
                    }
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.builtin_eoi(pos, input, None, None)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::program,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        };

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self
            .rule_empty_statement(pos, input)
            .map(|node| Node {
                rule: Rule::statement,
                start: node.start,
                end: node.end,
                children: vec![node],
                label: None,
                alternative: None,
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_grammar_statement(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("grammar"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_fragment_statement(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("fragment"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_import_statement(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("import"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_ignore_statement(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("ignore"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_assign_statement(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("assign"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_macro_then(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("macro_call"),
                        }
                    })
            })
            .or_else(|_| {
                let mut list = Vec::new();
                let start = pos;

                self.rule_macro_define(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_eos(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::statement,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: Some("macro_def"),
                        }
                    })
            });

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_empty_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::empty_statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self.rule_eos(pos, input).map(|node| Node {
            rule: Rule::empty_statement,
            start: node.start,
            end: node.end,
            children: vec![node],
            label: None,
            alternative: None,
        });

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_eos(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::eos);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self.match_terminal(pos, input, Terminal::Literal).map(|end| Node::new(Rule::eos, pos, end, None, None)).ok_or(pos);

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_grammar_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::grammar_statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            self.rule_grammar(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_symbol(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.match_terminal(pos, input, Terminal::Literal_0).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    {
                        let mut list = Vec::new();
                        let start = pos;

                        self.rule_string(pos, input)
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                {
                                    let mut list = Vec::new();
                                    let start = pos;
                                    let mut pos = pos;

                                    while let Ok(node) = {
                                        let mut list = Vec::new();
                                        let start = pos;

                                        self.match_terminal(pos, input, Terminal::Literal_1)
                                            .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                            .ok_or(pos)
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_IGNORE(pos, input)
                                            })
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_string(pos, input)
                                            })
                                            .map(|node| {
                                                let end = node.end;
                                                list.push(node);

                                                Node {
                                                    rule: Rule::List,
                                                    start,
                                                    end,
                                                    children: list,
                                                    label: None,
                                                    alternative: None,
                                                }
                                            })
                                    } {
                                        if pos == node.end {
                                            // must be making progress
                                            break;
                                        }
                                        pos = node.end;
                                        list.push(node);
                                    }

                                    Ok(Node {
                                        rule: Rule::Any,
                                        start,
                                        end: pos,
                                        children: list,
                                        label: None,
                                        alternative: None,
                                    })
                                }
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.match_terminal(pos, input, Terminal::Literal_1)
                                    .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                    .ok_or(pos)
                                    .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                            })
                            .map(|node| {
                                let end = node.end;
                                list.push(node);

                                Node {
                                    rule: Rule::List,
                                    start,
                                    end,
                                    children: list,
                                    label: None,
                                    alternative: None,
                                }
                            })
                    }
                    .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.match_terminal(pos, input, Terminal::Literal_2).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::grammar_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        }
        .or_else(|_| {
            let mut list = Vec::new();
            let start = pos;

            self.rule_grammar(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_symbol(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_string(pos, input).or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::grammar_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        });

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_grammar(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::grammar);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self.match_terminal(pos, input, Terminal::grammar_0).map(|end| Node::new(Rule::grammar, pos, end, None, None)).ok_or(pos);

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_fragment_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::fragment_statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            self.rule_fragment(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_symbol(pos, input)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::fragment_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        };

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_fragment(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::fragment);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self.match_terminal(pos, input, Terminal::fragment_0).map(|end| Node::new(Rule::fragment, pos, end, None, None)).ok_or(pos);

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_import_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::import_statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            self.rule_import(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_string(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.match_terminal(pos, input, Terminal::Literal_0).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    {
                        let mut list = Vec::new();
                        let start = pos;

                        self.rule_symbol_alias(pos, input)
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                {
                                    let mut list = Vec::new();
                                    let start = pos;
                                    let mut pos = pos;

                                    while let Ok(node) = {
                                        let mut list = Vec::new();
                                        let start = pos;

                                        self.match_terminal(pos, input, Terminal::Literal_1)
                                            .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                            .ok_or(pos)
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_IGNORE(pos, input)
                                            })
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_symbol_alias(pos, input)
                                            })
                                            .map(|node| {
                                                let end = node.end;
                                                list.push(node);

                                                Node {
                                                    rule: Rule::List,
                                                    start,
                                                    end,
                                                    children: list,
                                                    label: None,
                                                    alternative: None,
                                                }
                                            })
                                    } {
                                        if pos == node.end {
                                            // must be making progress
                                            break;
                                        }
                                        pos = node.end;
                                        list.push(node);
                                    }

                                    Ok(Node {
                                        rule: Rule::Any,
                                        start,
                                        end: pos,
                                        children: list,
                                        label: None,
                                        alternative: None,
                                    })
                                }
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.match_terminal(pos, input, Terminal::Literal_1)
                                    .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                    .ok_or(pos)
                                    .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                            })
                            .map(|node| {
                                let end = node.end;
                                list.push(node);

                                Node {
                                    rule: Rule::List,
                                    start,
                                    end,
                                    children: list,
                                    label: None,
                                    alternative: None,
                                }
                            })
                    }
                    .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.match_terminal(pos, input, Terminal::Literal_2).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::import_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        }
        .or_else(|_| {
            let mut list = Vec::new();
            let start = pos;

            self.rule_import(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_string(pos, input)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::import_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        });

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_import(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::import);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = self.match_terminal(pos, input, Terminal::import_0).map(|end| Node::new(Rule::import, pos, end, None, None)).ok_or(pos);

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_symbol_alias(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::symbol_alias);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            {
                let mut list = Vec::new();
                let start = pos;

                self.rule_symbol(pos, input)
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.match_terminal(pos, input, Terminal::_as).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                    })
                    .and_then(|node| {
                        let pos = node.end;
                        list.push(node);
                        self.rule_IGNORE(pos, input)
                    })
                    .map(|node| {
                        let end = node.end;
                        list.push(node);

                        Node {
                            rule: Rule::List,
                            start,
                            end,
                            children: list,
                            label: None,
                            alternative: None,
                        }
                    })
            }
            .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
            .and_then(|node| {
                let pos = node.end;
                list.push(node);
                self.rule_symbol(pos, input)
            })
            .map(|node| {
                let end = node.end;
                list.push(node);

                Node {
                    rule: Rule::symbol_alias,
                    start,
                    end,
                    children: list,
                    label: None,
                    alternative: None,
                }
            })
        };

        // Note that failure to match is also cached using Err()
        self.rule_memo.insert(key, res.clone());

        res
    }

    #[allow(non_snake_case)]
    fn rule_ignore_statement(&mut self, pos: usize, input: &str) -> Result<Node, usize> {
        let key = (pos, Rule::ignore_statement);

        if let Some(res) = self.rule_memo.get(&key) {
            return res.clone();
        }

        let res = {
            let mut list = Vec::new();
            let start = pos;

            self.rule_ignore(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_symbol(pos, input)
                })
                .map(|node| {
                    let end = node.end;
                    list.push(node);

                    Node {
                        rule: Rule::ignore_statement,
                        start,
                        end,
                        children: list,
                        label: None,
                        alternative: None,
                    }
                })
        }
        .or_else(|_| {
            let mut list = Vec::new();
            let start = pos;

            self.rule_ignore(pos, input)
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.match_terminal(pos, input, Terminal::Literal_0).map(|end| Node::new(Rule::Terminal, pos, end, None, None)).ok_or(pos)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    self.rule_IGNORE(pos, input)
                })
                .and_then(|node| {
                    let pos = node.end;
                    list.push(node);
                    {
                        let mut list = Vec::new();
                        let start = pos;

                        self.rule_symbol(pos, input)
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                {
                                    let mut list = Vec::new();
                                    let start = pos;
                                    let mut pos = pos;

                                    while let Ok(node) = {
                                        let mut list = Vec::new();
                                        let start = pos;

                                        self.match_terminal(pos, input, Terminal::Literal_1)
                                            .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                            .ok_or(pos)
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_IGNORE(pos, input)
                                            })
                                            .and_then(|node| {
                                                let pos = node.end;
                                                list.push(node);
                                                self.rule_symbol(pos, input)
                                            })
                                            .map(|node| {
                                                let end = node.end;
                                                list.push(node);

                                                Node {
                                                    rule: Rule::List,
                                                    start,
                                                    end,
                                                    children: list,
                                                    label: None,
                                                    alternative: None,
                                                }
                                            })
                                    } {
                                        if pos == node.end {
                                            // must be making progress
                                            break;
                                        }
                                        pos = node.end;
                                        list.push(node);
                                    }

                                    Ok(Node {
                                        rule: Rule::Any,
                                        start,
                                        end: pos,
                                        children: list,
                                        label: None,
                                        alternative: None,
                                    })
                                }
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.rule_IGNORE(pos, input)
                            })
                            .and_then(|node| {
                                let pos = node.end;
                                list.push(node);
                                self.match_terminal(pos, input, Terminal::Literal_1)
                                    .map(|end| Node::new(Rule::Terminal, pos, end, None, None))
                                    .ok_or(pos)
                                    .or_else(|_| Ok(Node::new(Rule::Terminal, pos, pos, None, None)))
                            })
                            .map(|node| {
                                let end = node.end;
                                list.push(node);
